# CNN-SNS

source/CNN_v3/: CMakeLists.txt  NN.h  Search.cpp  main.c  model_v2.h  nn_1.cpp  nn_init.cpp  nn_print.cpp  offline_NN.tcsh
source/CNN_v3/sFlow_source/: comm_mpi.c  comm_mpi.h  defs.h  get_global_mesh.c  get_global_mesh.h  hddm_types.h  mem.c  mem.h  stdfunc.c  stdfunc.h
